2008-11-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Core/Gettext.cs: Fix some obsoletion warnings by using
	Mono.Unix.Catalog instead of Mono.Posix.Catalog.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Execution/ProcessHostController.cs: Windows doesn't
	like single quotes when specifying arguments to a process.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.addin.xml: Bump MD version.

2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Execution/ProcessWrapper.cs: Fix bug 436200 - Crash
	when stopping a process execution.

2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Serialization/GenericCollectionHandler.cs: Added
	protection against multiple Add methods in a class.

2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.mdp, Makefile.am,
	  MonoDevelop.Core/GettextCatalog.cs, MonoDevelop.Core/Gettext.cs:
	  Replaced GettextCatalog.

2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.AddIns/ServiceExtensionNode.cs,
	  MonoDevelop.Core.Execution/ProcessService.cs,
	  MonoDevelop.Core.addin.xml, MonoDevelop.Core.mdp, Makefile.am,
	  MonoDevelop.Core/Runtime.cs, MonoDevelop.Core/AbstractService.cs,
	  MonoDevelop.Core/ServiceManager.cs,
	  MonoDevelop.Core/SystemAssemblyService.cs,
	  MonoDevelop.Core/IService.cs: Remove service APIs.

2008-09-16  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.Core.Execution/ProcessWrapper.cs: null check to avoid
	NREs.  Fixes #418650.

2008-09-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Serialization/XmlMapAttributeProvider.cs: Allow
	  chaining several serialization maps for a type.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Collections/ReadOnlyDictionary.cs,
	  MonoDevelop.Core.mdp, Makefile.am: Implemented new
	  ReadOnlyDictionary class.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 
